Time: 8 ms (16.02%), Space: 50.5 MB (5.57%) - LeetHub